<resources>
    <string name="app_name">healthcare</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="file">File</string>
    <string name="create_new">Create new</string>
    <string name="open">Open</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Register</string>
    <string name="contact">Contact</string>
    <string name="date_of_birth_">date of birth :</string>
    <string name="contact_">contact :</string>
    <string name="name_">name :</string>
    <string name="user_account">User Account</string>
    <string name="update">Update</string>
    <string name="update_account">Update account</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Logout</string>
    <string name="already_registered">Already registered?</string>
    <string name="login_here">Login here</string>
</resources>