<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include layout="@layout/appbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RecordActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bg_3" />

        <TextView
            android:id="@+id/rg20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="588dp"
            android:gravity="center"
            android:text="@string/user_account"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="461dp"
            android:gravity="center"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            app:cardCornerRadius="20dp"
            app:strokeColor="@color/white_smoke"
            app:strokeWidth="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/name_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/name_"
                    android:textAllCaps="true"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:layout_toEndOf="@id/name_txt"
                    android:text="@string/name"
                    android:layout_alignBottom="@id/name_txt"
                    android:textColor="@color/white_smoke"
                    android:textSize="25sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="385dp"
            android:gravity="center"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            app:cardCornerRadius="20dp"
            app:strokeColor="@color/white_smoke"
            app:strokeWidth="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/contact_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/contact_"
                    android:textAllCaps="true"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:layout_toEndOf="@id/contact_txt"
                    android:text="@string/contact"
                    android:layout_alignBottom="@id/contact_txt"
                    android:textColor="@color/white_smoke"
                    android:textSize="25sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="310dp"
            android:gravity="center"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            app:cardCornerRadius="20dp"
            app:strokeColor="@color/white_smoke"
            app:strokeWidth="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/dob_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/date_of_birth_"
                    android:textAllCaps="true"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/dob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="25dp"
                    android:layout_toEndOf="@id/dob_txt"
                    android:text="@string/date_of_birth"
                    android:layout_alignBottom="@id/dob_txt"
                    android:textColor="@color/white_smoke"
                    android:textSize="25sp" />
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

        <!--<Button
            android:id="@+id/btnInsert_20f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="213dp"
            android:text="Insert New Data"
            android:textSize="20sp" />-->

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="153dp"
            android:text="@string/update_account"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="91dp"
            android:text="@string/delete_account"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="27dp"
            android:text="@string/logout"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>