<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <include layout="@layout/appbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bg_3" />

        <TextView
            android:id="@+id/rg20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white_smoke"
            android:textSize="34sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Material.OutlinedBox.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="112dp"
            android:layout_marginBottom="451dp"
            android:gravity="center"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Material.OutlinedBox.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="112dp"
            android:layout_marginBottom="362dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="number"
            app:boxStrokeColor="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:maxLines="1"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Material.Button"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:layout_above="@id/not_yet_registered"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="25sp"
            app:strokeColor="@color/white_smoke"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/not_yet_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/btn_login"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="160dp"
            android:text="Not yet registered? "
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/not_yet_registered"
            android:layout_toEndOf="@id/not_yet_registered"
            android:text="Register here"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>